--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
     "express-fileupload": "^1.5.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.0",
+    "formidable": "^2.1.1",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "rate-limiter": "^0.2.0",
+    "slugify": "^1.6.6",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^10.0.0",
     "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
   }
